# mcp-ssh

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude/: settings.json
.claude/commands/: deploy.md  implement.md  plan.md  qa.md
.claude/hooks/: pre-commit.sh
.github/workflows/: ci.yml
deploy/: Caddyfile.example  README.md  install.sh  mcp-ssh.service  nginx-mcp-ssh.conf.example
docs/: architecture.md  connect-claude.md  deploy.md  usage.md
docs/prompts/: skill.md  system-prompt.md
src/: admin.rs  app.rs  app_tests.rs  auth.rs  cli.rs  config.rs  db.rs  jobs.rs  main.rs  sentry.rs
src/jobs/: id.rs  log.rs  mod.rs  reaper.rs
src/oauth/: flow.rs  metadata.rs  mod.rs  store.rs
src/tools/: files.rs  mod.rs
